--- a/style.css
+++ b/style.css
@@ -3,9 +3,7 @@
     padding: 0;
     margin: 0;
     font-family: 'Poppins';
-    box-sizing: border-box;
-
-   
+    box-sizing: border-box; 
 }
 body{
     background-color:aliceblue;
@@ -13,43 +11,86 @@ body{
     color: white;
 }
 .hero{
-    height: 600px;
+    height: 540px;
     background-color:#091b29;
     border-radius: 0px 0px 150px 0px;
-    z-index:1;
-  
 }
-.menu1 a{
+nav a{
  text-decoration: none;
  color: white;
  padding: 10px;
  margin: 10px;
  font-size:18;
 }
-.menu1 a:hover{
+nav a:hover{
   transition: all 0.3s ease-in-out;
     color:#0a93c6;
-    /* transition: 0.3s; */
-   
    
 }
 .navbar{
+    margin-top: -20px;
+     height: 120px;
     display: flex;
     justify-content: space-between;
-    box-shadow: 0 4px 8px 2px #0a93c6;
-    padding: 10px;
-   
+    align-items: center;
+    background-color:#091b29;
+    padding: 0 20px;
+   }
+   /* navbar. responsive */
+       /* Your existing styles */
 
+.menu-toggle {
+  display: none;
+  cursor: pointer;
 }
+
+.bar {
+  width: 30px;
+  height: 3px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+@media only screen and (max-width: 768px) {
+  .menu-toggle {
+      display: block;
+  }
+
+  .nav-links {
+    text-align: center;
+      display: none;
+      flex-direction: column;
+      background-color: black;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      width: 100%;
+      padding: 10px;
+  }
+
+  .nav-links a {
+      display: block;
+      padding: 10px;
+      margin: 10px;
+      font-size: 18px;
+      color: white;
+      text-decoration: none;
+  }
+
+  .nav-links a:hover {
+      color: #0a93c6;
+  }
+}
+
+
+
+     /* navbar. responsive */
+
 .left img{
    margin-top: 70px;
   height: 400px;
-  -moz-box-shadow: 0px 6px 5px #0a93c6;
-  -webkit-box-shadow: 0px 6px 5px #0a93c6;
-  box-shadow: 0px 6px 5px #0a93c6;
-  -moz-border-radius:190px;
-  -webkit-border-radius:190px;
-  border-radius:190px;
+  
 }
 .herosection{
     display: flex;
@@ -57,7 +98,7 @@ body{
     margin-top: -40px;
 }
 .right{
-    margin-top: 120px;
+    margin-top: 90px;
     text-align: center;
 
 }
@@ -65,6 +106,7 @@ body{
     color: white;
     padding:10px;
     font-size: 25px;
+   font-weight: 300;
     
 }
 
@@ -191,7 +233,7 @@ body{
     
   }
   .Aboutcontainer{
-    /* height: 300px; */
+    min-height: 320px;
     width: auto;
     background-color: #091b29;
     display: flex;
@@ -223,16 +265,22 @@ border-radius: 50%;
 .projectContainer{
   display: flex;
   justify-content: space-evenly;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 30px;
 }
 .projectBox{
+display: flex;
+justify-content: center;
+align-items: center; 
+flex-direction: column; 
 height: 400px;
 width: 550px;
-margin:35px 6px;
 color: #000;
 box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-
-
 }
+
 .projectBox img{
   height: 230px;
   width: auto;
@@ -271,17 +319,18 @@ box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 
   /* Media Query for Mobile Devices */
   @media (max-width: 480px) {
+   
     .left img{
-      height: 190px;
+      height: 290px;
       margin-left: 5px;
   }
   .hero{
-      height: 400px;
+      min-height: 660px;
       width: auto;
-      border-radius: 0px 0px 15px 0px;
+      border-radius: 0px 0px 150px 0px;
   }
   .right{
-      margin-top:80px;
+      margin-top:30px;
   }
   .hide{
      display: none;
@@ -298,13 +347,13 @@ box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
      
   }
   .right P{
-   font-size: 10px;
+   font-size: 12px;
    padding:5px;
    margin-top:0;
   }
   .btn{
       font-size: 12px;
-      padding: 5px;
+      padding: 10px;
       margin-top: 20px;
   }
   .btn2{
@@ -312,90 +361,103 @@ box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   }
   .social2 img{
      height:22px;
-      padding:10;
+      padding:20;
      text-align: center;
      margin-top: 15px;
      box-shadow: none;
-     margin-left: 30px;
+     margin-left: 40px;
   }
   .herosection{
-      margin-top:-30px ;
-      padding-top: 0px;
+      
+       width: auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
   }
   .spni1{
-    font-size: 40px;
+    font-size: 65px;
   }
-  .spni{
-    font-size: 20px;
-    color: white;
-  }
- /* skill section */
- .skillSection{
-  height: 1220px;
-  width: auto;
+  /* skill .skillSection */
+  .skillSection{
+    height: 1200px;
+    width: auto;
+   }
   
- }
   .skillContainer{
     display: flex;
     flex-direction: column;
-  
-
   }
   .kblock{
     height: 250px;
-    width: 300px;
+    width: 360px;
     margin: 10px auto;
   }
   .kblock:hover{
-    height: 270px;
-    width: 320px;
-    transition: 0.3s;
-  }
-  /* about me */
+  height: 270px;
+  width: 400px;
+  transition: 0.3s;
+}
 
-  .aboutbox p{
-   font-size: 12px;
+ /* about me */
+ .aboutbox p{
+  font-size: 12px;
+ }
+ .aboutImg{
+  height: 200px;
+ 
+}
+.abutispn{
+  display: none;
+}
+.aboutHeading{
+  padding: 15px;
+}
+.aboutSocial img{
+  margin: 10px;
+  height: 30px;
+  width: auto;
+}
+  /* project  */
+
+
+ .projectContainer{
+  height:400 ;
+  width:480 ;
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+ }  
+ .projectBox{
+  margin: 5px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  flex-direction: column; 
+  height: 320px;
+  width: 360px;
+  color: #000;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   }
-  .aboutImg{
-    margin-top: 20px;
-    height: 200px;
+  .projectBox img{
+    height: 160px;
+    width: auto;
+    margin: 10px 1px;
+  }
+  .Aboutcontainer{
+    margin: 5px auto;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
    
   }
-  .abutispn{
-    display: none;
-  }
-  .aboutHeading{
-    padding: 10px;
-  }
-  .aboutSocial img{
-    margin: 10px;
-
-  }
-  .abutispn{
-    display: none;
-  }
-  .hideBtn{
-    display: none;
-  }
-  /* project  */
-  .Row{
-    display: flex;
-    flex-direction: column;
-  }
-  .projectContainer{
-    display: flex;
-    flex-direction: column;
-    justify-content:center;
-   }  
-   .projectBox{
-    height: 340px;
-    width: 400px;
-    margin:25px 6px;
-   }
-   .projectBox img{
-    height: 180px;
-    width: auto;
-    margin: 6px 1px;
+  .aboutbox{
+    height: auto;
+    width: 80%;
+    text-align: center;
+    align-items: center;
+    padding:10px;
   }
 
  /* footer */
@@ -406,16 +468,16 @@ box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 @media (min-width: 481px) and (max-width: 767px) {
    
     .left img{
-        height: 220px;
+        height: 290px;
         margin-left: 5px;
     }
     .hero{
-        height: 400px;
+        min-height: 660px;
         width: auto;
         border-radius: 0px 0px 150px 0px;
     }
     .right{
-        margin-top:80px;
+        margin-top:30px;
     }
     .hide{
        display: none;
@@ -432,13 +494,13 @@ box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
        
     }
     .right P{
-     font-size: 10px;
+     font-size: 12px;
      padding:5px;
      margin-top:0;
     }
     .btn{
         font-size: 12px;
-        padding: 5px;
+        padding: 10px;
         margin-top: 20px;
     }
     .btn2{
@@ -453,11 +515,15 @@ box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
        margin-left: 40px;
     }
     .herosection{
-        margin-top:-50px ;
-        padding-top: 0px;
+        
+         width: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
     }
     .spni1{
-      font-size: 35px;
+      font-size: 65px;
     }
     /* skill .skillSection */
     .skillSection{
@@ -485,7 +551,7 @@ box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     font-size: 12px;
    }
    .aboutImg{
-    height: 210px;
+    height: 200px;
    
   }
   .abutispn{
@@ -500,15 +566,31 @@ box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     width: auto;
   }
     /* project  */
-    .Row{
-      display: flex;
-      flex-direction: column;
-    }
+
+
    .projectContainer{
+    height:400 ;
+    width:480 ;
     display: flex;
     flex-direction: column;
     justify-content:center;
    }  
+   .projectBox{
+    margin: 5px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    flex-direction: column; 
+    height: 360px;
+    width: 460px;
+    color: #000;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    }
+    .projectBox img{
+      height: 200px;
+      width: auto;
+      margin: 10px 1px;
+    }
   
 
 }
