--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ nav a:hover{
    
 }
 .navbar{
-    margin-top: -20px;
-     height: 120px;
+     
+     height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -90,7 +90,7 @@ nav a:hover{
 
      .moving-image {
       
-      animation: moveImage 25s linear infinite; /* Adjust the animation duration and timing function as needed */
+      animation: moveImage 25s linear infinite; /
   }
 
   @keyframes moveImage {
@@ -99,27 +99,27 @@ nav a:hover{
       }
 
       50% {
-          transform: translateX(15%); /* Adjust the distance you want the image to move */
+          transform: translateX(15%); 
       }
       51% {
         transform: translate -X(14%);
     }
 
     100% {
-        transform: translate -X(2%); /* Adjust the distance you want the image to move */
+        transform: translate -X(2%); 
     }
     }
 
      
 .left img{
-   margin-top: 70px;
+   margin-top: 40px;
   height: 400px;
   
 }
 .herosection{
     display: flex;
     justify-content: space-around;
-    margin-top: -40px;
+    margin-top: 1px;
 }
 .right{
     margin-top: 90px;
