--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ border-radius: 50%;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 20px;
-  margin: 30px;
+  margin: 20px;
 }
 .projectBox{
 display: flex;
@@ -324,7 +324,66 @@ box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   color: white;
    background-color: #0a93c6;
    border-radius: 6px 2px; 
+   border: none;
 
+}
+
+/* constact form */
+.ContactBox{
+  
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+  min-height:  600px;
+   margin: 0px;
+   gap: 20px;
+}
+.ContactBox h3{
+  text-align: center;
+  color: #091b29;
+}
+.ContactContainer{
+   width:45%;
+   display: flex;
+   flex-direction: column;
+   gap: 20px;
+   padding: 30px;
+   background-color: white;
+   box-shadow: 1px 2px 1px 3px rgb(229, 217, 217);
+}
+.map{
+  width: 45%;
+}
+.ContactContainer form{
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+}
+.ContactContainer input{
+   padding: 5px;
+   background-color: whitesmoke;
+   /* box-shadow: 0.2px 0.5px 1px 1px; */
+   border: none;
+}
+.ContactContainer textarea{
+   padding: 5px;
+   background-color: whitesmoke;
+   /* box-shadow: 0.2px 0.5px 1px 1px; */
+   border: none;
+}
+.ContactContainer button{
+   padding: 5px;
+   border: none;
+   background-color: #7465db;
+   box-shadow: 0.2px 0.5px 1px 1px;
+}
+
+.ContactBox{
+   height: 400px;
+   width: auto;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
  /* footer section */
@@ -615,6 +674,21 @@ box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
       width: auto;
       margin: 10px 1px;
     }
+    .ContactBox{
+      display: flex;
+      justify-content: space-evenly;
+      flex-direction:column;
+      min-height:  700px;
+       margin: 20px;
+      gap: 20px;
+    }
+  
+  .map{
+    width: 100%;
+  }
+  .ContactContainer{
+    width: 90%;
+  }
   
 
 }
