--- a/style.css
+++ b/style.css
@@ -546,6 +546,24 @@ box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   }
 
  /* footer */
+ .ContactBox{
+  display: flex;
+  flex-direction:column;
+  min-height:  700px;
+  width: 100%;
+  margin: 20px auto;
+  gap: 20px;
+}
+
+.map{
+width: 100%;
+
+}
+.ContactContainer{
+width: 95%;
+margin: 10px auto;
+
+}
 
 }
 
